--- a/nodes/WABTEC_PREPARED-PROF_NX_CUSTOMER_WABTEC.yml
+++ b/nodes/WABTEC_PREPARED-PROF_NX_CUSTOMER_WABTEC.yml
@@ -873,7 +873,7 @@ operation:
         config:
           isDistinctCount: true
           isNullCount: true
-        dataType: NUMBER(38,0)
+        dataType: DATE
         description: ""
         name: STR_DATE_MODIFIED
         nullable: true
@@ -881,7 +881,7 @@ operation:
           - columnReferences:
               - columnCounter: 1dccb60e-a002-41d6-a7bf-326d4903b56a
                 stepCounter: 6fe06a7b-9e02-475b-8c42-e8311376d3ac
-            transform: ""
+            transform: TRY_TO_DATE(CASE COALESCE("STG_NX_CUSTOMER_WABTEC"."STR_DATE_MODIFIED", 0)WHEN 0 THEN NULL ELSE CAST(LEFT("STG_NX_CUSTOMER_WABTEC"."STR_DATE_MODIFIED"+19000000, 4) || '-' || SUBSTR("STG_NX_CUSTOMER_WABTEC"."STR_DATE_MODIFIED"+19000000, 5,2)|| '-' || RIGHT("STG_NX_CUSTOMER_WABTEC"."STR_DATE_MODIFIED"+19000000,2) AS DATE) END)
       - appliedColumnTests: {}
         columnReference:
           columnCounter: ec66485c-b872-4303-a48f-af13f8c2dca3
