--- a/nodes/WABTEC_PREPARED-STG_NX_REVENUE_FILE_SUMMARY.yml
+++ b/nodes/WABTEC_PREPARED-STG_NX_REVENUE_FILE_SUMMARY.yml
@@ -792,7 +792,7 @@ operation:
           columnCounter: df87f95f-38b7-4e1e-88ee-156a979e90bf
           stepCounter: 908c1fd2-9942-47a4-9d1d-896cd209a698
         config: {}
-        dataType: VARCHAR(16777216)
+        dataType: DATE
         description: ""
         name: WAYBILL_DATE
         nullable: true
@@ -800,7 +800,7 @@ operation:
           - columnReferences:
               - columnCounter: 76b9a4a2-dd85-4dfd-b817-7861a545491e
                 stepCounter: 1d0aff80-81de-437b-9610-e411291ba8a0
-            transform: ""
+            transform: TRY_TO_DATE("NX_REVENUE_FILE_SUMMARY"."WAYBILL_DATE",'YYYYMMDD')
       - appliedColumnTests: {}
         columnReference:
           columnCounter: 2dab74c2-b7e2-4357-beca-7ad4a5c68381
