--- a/nodes/WABTEC_PREPARED-STG_NX_STATION_MASTER.yml
+++ b/nodes/WABTEC_PREPARED-STG_NX_STATION_MASTER.yml
@@ -512,7 +512,7 @@ operation:
           columnCounter: 0c4f7280-02f8-4666-aed5-2c17c120a90a
           stepCounter: 389aa30f-aefa-4c0f-ac39-92c58b72d40f
         config: {}
-        dataType: NUMBER(38,0)
+        dataType: DATE
         description: ""
         name: STR_DATE_MODIFIED
         nullable: true
@@ -520,7 +520,7 @@ operation:
           - columnReferences:
               - columnCounter: 16dadc61-4e9e-4120-9755-bd3aea2c142b
                 stepCounter: 2f0d7664-c6b1-42fa-93dc-f95fdc21ec86
-            transform: ""
+            transform: TRY_TO_DATE(CASE COALESCE("NX_STATION_MASTER"."STR_DATE_MODIFIED", 0)WHEN 0 THEN NULL ELSE CAST(LEFT("NX_STATION_MASTER"."STR_DATE_MODIFIED"+19000000, 4) || '-' || SUBSTR("NX_STATION_MASTER"."STR_DATE_MODIFIED"+19000000, 5,2)|| '-' || RIGHT("NX_STATION_MASTER"."STR_DATE_MODIFIED"+19000000,2) AS DATE) END)
       - appliedColumnTests: {}
         columnReference:
           columnCounter: eec7b23e-5a74-4bb9-b051-8e8d6a21eeb1
